scss/media/_responsive.scss
@media (min-width: 768px) {
  body {
    font-size: 16px;
  }

  .header,
  .header__menu,
  .footer,
  .footer__menu {
    font-size: 14px;
  }

  #terminal {
    width: 80%;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
  }

  .terminal-line,
  #input {
    font-size: 16px;
  }
}

